# bazel-demo

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  WORKSPACE  maven_compose.lock.json  pnpm-lock.yaml  xcode-bazelrc-gen.sh  xcode.bazelrc
card-wallet-app/: BUILD.bazel  Package.swift
card-wallet-app/Resources/: Info.plist
card-wallet-app/content/: AddCardView.swift  AddToAppleWalletView.swift  BUILD.bazel  CardListView.swift  CardView.swift  ContentView.swift  EditCardView.swift  MainApp.swift  ViewCardView.swift
card-wallet-app/shortcuts/: AppShortcuts.swift  BUILD.bazel
card-wallet-app/src/: AddCardTileView.swift  AddCardView.swift  AddToAppleWalletView.swift  BUILD.bazel  BarcodeScannerView.swift  BarcodeView.swift  CardListView.swift  CardView.swift  ContentView.swift  EditCardView.swift  MainApp.swift  ViewCardView.swift
code-tools/: .mocharc.json  BUILD.bazel  mocha-setup.mjs  package.json  pnpm-lock.yaml  relock  tsconfig.json
code-tools/src/: BUILD.bazel  codemod-with-timing.mts  codemod.mts  codemod.test.mts  codemod.ts  index.mts  query.mts  query.test.mts  types.d.mts  types.d.ts
code-tools/tools/: mocha.bzl
example-android-app/: .bazelproject  AndroidManifest.xml  BUILD.bazel  README.md  install  proguard-rules.pro
example-android-app/rust-shared/: BUILD.bazel  lib.rs
example-android-app/src/: BUILD.bazel
example-app/: BUILD  BUILD.bazel
example-app/utils/: BUILD.bazel  formatters.swift
example-ios-app/: .gitignore  BUILD.bazel  BazelApp.swift  Package.swift  README.md
example-ios-app/JsWrap/: BUILD.bazel  load.swift  subscripts.swift
example-ios-app/JsWrapExample/: BUILD.bazel  api.swift  index.js  loadFile.swift  main.swift
example-ios-app/JsWrapTests/: BUILD.bazel  ErrorLoggingTests.swift  SetTimeoutTests.swift
example-ios-app/Log/: BUILD.bazel  log.swift
example-ios-app/drag-example/: BUILD.bazel  DragExampleView.swift
example-ios-app/jotai-example/: BUILD.bazel  JotaiExampleView.swift
example-ios-app/js-wrap/: BUILD.bazel  index.js  load.swift  log.swift  main.swift  subscripts.swift
example-ios-app/rust-logs/: BUILD.bazel  LogsView.swift
example-ios-app/rust-uniffi-example/: BUILD.bazel  RustUniffiExampleView.swift
example-ios-app/rust_lib/: BUILD.bazel  lib.rs
example-ios-app/sqlite-example/: BUILD.bazel  SqliteExampleView.swift
example-ios-app/utils/: BUILD.bazel  string.swift
g1-app/: .gitignore  BUILD.bazel  MainApp.swift  Package.swift  README.md  swift-shared
g1-app/Connect/: BUILD.bazel  bluetooth.swift  constants.swift  g1protocol.swift  manager.swift  utils.swift
g1-app/Log/: BUILD.bazel  LogsUi.swift  log-entry.swift  log.swift  model.swift
g1-app/Resources/: Info.plist
g1-app/content/: BUILD.bazel  ContentView.swift  DashConfigView.swift  GlassesInfoView.swift  GlassesPreviewView.swift  LazyView.swift  NavigateSearchView.swift  NavigateView.swift  NotifAppsView.swift  SearchHistoryView.swift  Teleprompt.swift  WatchConnectivityManager.swift  apps-model.swift  cron-time.swift  events.swift  glasses-model.swift  mainvm.swift  maps.swift  note-model.swift  notifs.swift  state-atoms.swift  user-defaults-state.swift  weather.swift
g1-app/g1protocol/: BUILD.bazel  bluetooth+listeners.swift  bluetooth+pairing.swift  bluetooth+polling.swift  bluetooth+transmit.swift  bluetooth.swift  commands+config.swift  commands+device.swift  commands+info.swift  commands.swift  commandsTests.swift  config.swift  glasses-model.swift  info.swift  utils.swift
g1-app/jotai/: BUILD.bazel  jotai+swiftui.swift  jotai+swiftuiTests.swift  jotai+utils.swift  jotai.swift  jotaiTests.swift
g1-app/jotai-example/: BUILD.bazel  jotai.swift
g1-app/log-utils/: BUILD.bazel
g1-app/maps/: BUILD.bazel  lib.swift  overpass-api.swift  raster.swift  rasterTests.swift  renderer.swift  rendererTests.swift  utils.swift
g1-app/snapshot-testing/: BUILD.bazel  snapshot-testing.swift
g1-app/utils/: BUILD.bazel  array.swift  concurrent.swift  data.swift  dataTests.swift  date.swift  math.swift  sub.swift
g1-app/vendor-pcm/: BUILD.bazel  PcmConverter.m
g1-app/watch-app/: BUILD.bazel  ContentView.swift  Info.plist  WatchApp.swift  WatchConnectivityManager.swift
js-lib/: BUILD.bazel  index.ts  package.json  pnpm-lock.yaml
js-site/: install  (+3 more)
rust-code/: .nvim.lua  .vimrc  BUILD.bazel  Cargo.toml  README.md  link.sh  rust-analyzer  setup-rust-analyzer
rust-code/aarch64-linux-android/: BUILD.bazel
rust-code/bazel-args/: BUILD.bazel  README.md  bazel-args.rs  ibazel-args.rs  lib.rs
rust-code/bytes-to-image/: BUILD.bazel  main.rs
rust-code/diff-resolver/: BUILD.bazel
rust-code/edit-files/: BUILD.bazel  main.rs
rust-code/editor-tools/: do-link.sh
rust-code/example-rusqlite/: BUILD.bazel  lib.rs
rust-code/example-shared-lib/: BUILD.bazel  lib.rs
rust-code/example-sqlite/: BUILD.bazel  bindings.rs  conversions.rs  db.rs  lib.rs  types.rs
rust-code/http-shared/: BUILD.bazel  filters.rs  http.rs  lib.rs  uniffi_binding.rs  wasm_binding.rs
rust-code/jotai/: BUILD.bazel  atom_base.rs  benchmark.rs  dispatch_atom.rs  getter_setter.rs  jotai-llm.rs  jotai-uniffi.rs  jotai.rs  jotai_store.rs  lib.rs  primitive_atom.rs  select_atom.rs  subscription_set.rs
rust-code/jotai-logs/: BUILD.bazel  lib.rs
rust-code/log-db/: BUILD.bazel  lib.rs  log_db.rs
rust-code/logger/: BUILD.bazel  android.rs  lib.rs  log.rs
rust-code/rusqlite-migrations/: BUILD.bazel  lib.rs
rust-code/ssim/: BUILD.bazel  ssim.rs
rust-code/terraform-targets/: BUILD.bazel  main.rs
rust-code/traverse-lib/: BUILD.bazel  traverse.rs
rust-code/tree-sitter-utils/: BUILD.bazel  helpers.rs  lib.rs  traverse.rs
rust-code/utils/: BUILD.bazel  string.rs
simple-android-app/: .bazelproject  AndroidManifest.xml  BUILD.bazel  README.md  install
tools/: .swiftlint  .swiftlint.yml  BUILD.bazel  deps.bzl  dl.bzl  mocha.bzl  node.bzl  platform_mappings  repositories.bzl  rust_uniffi.bzl  rust_wasm.bzl  ubrn.rs
vimkeys/: .gitignore  BUILD.bazel  Info.plist  SafariWebExtensionHandler.swift
(+297 files in other folders)
