load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("@build_bazel_rules_apple//apple:watchos.bzl", "watchos_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

package(default_visibility = ["//visibility:public"])

ios_application(
    name = "card-wallet-app",
    app_intents = [
        "//card-wallet-app/shortcuts",
    ],
    bundle_id = "com.ayroblu.card-wallet-app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "18.0",
    # cp ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/<uuid>.mobileprovision .
    provisioning_profile = "9e7f675e-35df-42db-bbb9-4e85f7b6e2eb.mobileprovision",
    # resources = glob(
    #     ["Assets/*"],
    #     exclude_directories = 0,
    # ),
    deps = [
        "//card-wallet-app/src",
    ],
)

macos_application(
    name = "macos",
    bundle_id = "com.ayroblu.card-wallet-app.macos",
    #bundle_name = "card-wallet-app",
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "15.0",
    # cp ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/<uuid>.mobileprovision .
    # provisioning_profile = "5bc6ee9b-186f-4f5c-8525-0382a219531e.mobileprovision",
    # resources = glob(
    #     ["Assets/*"],
    #     exclude_directories = 0,
    # ),
    deps = [":lib"],
)

# bazel run xcodeproj && xed card-wallet-app.xcodeproj
xcodeproj(
    name = "xcodeproj",
    project_name = "card-wallet-app",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            ":card-wallet-app",
            target_environments = [
                "device",
                "simulator",
            ],
        ),
    ],
)
