load("//code-tools/tools:mocha.bzl", "mocha_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@code-tools-npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//code-tools:__subpackages__"],
)

filegroup(
    name = "setup",
    srcs = [
        ".mocharc.json",
        "mocha-setup.mjs",
    ],
)

mocha_test(
    name = "test",
    chdir = package_name(),
    deps = [
        ":setup",
        "//code-tools/src",
    ],
)
